[package]
name = "home_cloud"
version = "0.1.0"
authors = ["saya <saya@saya.ac.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#rbatis orm dep must use async-std(Because actix-web relies on tokio0.2)
rbson = "2.0"
rbs = { version = "0.1"}
rbatis = { version = "4"}
rbdc-mysql = { version ="0.1"}
#rbatis orm dep must use async-std(Because actix-web relies on tokio0.2)
tokio = { version = "1", features = ["full"] }
#must use async-std(Because actix-web relies on tokio0.2)
async-std = "1.10"
#serde and json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# 日期时间库
chrono = { version = "0.4", features = ["serde"] }
#log
log = "0.4"
#fast_log enable features = ["lz4", "zip", "gzip"], and edit src/config/log.rs fn choose_packer(),edit application.yml add log_pack_compress: "zip"
fast_log = { version = "1.5",features = ["lz4", "zip", "gzip"]}
futures= { version = "0.3.21", default-features = false, features = ["std"] }
#web server
actix = "0.13.0"
actix-web = "4.0"
actix-http = "3.0"
actix-multipart = "0.4"
actix-files = "0.6.0"
#jwt
jsonwebtoken = "7"
# 生成密码要用
md5 = "0.7.0"
#async trait
async-trait = "0.1"
#map
indexmap = "1.7.0"
once_cell = "1.9"
#static
lazy_static = "1.4.0"
#随机数
rand = "0.8.3"
#base64（图片要用）
base64 = "0.13.0"
#下载文件时对文件名编码
urlencoding = "0.2.0"
#用于货币金额
rust_decimal = "1.25.0"
# Excel工具
simple_excel_writer = "0.2.0"
# 定时任务
cron_tab = "0.1.4"
# 发送邮件
lettre="0.10.0-alpha.5"
